--- a/templates/settings.html
+++ b/templates/settings.html
@@ -1,41 +1,131 @@
-<center>
-<p>
-<table border=1>
-<tr><td>
-	<table border=0 cellpadding=10 cellspacing=10>
-	<tr>
-	<td colspan=5 align=center>
-	<b><TMPL_VAR SETTINGS.LABEL_SERVER></b>
-	</td>
-	</tr>
-	<tr>
-	<td>
-		<a id="button" data-icon="check" data-role="button" data-inline="true" data-mini="false" href="./index.cgi?do=start"><TMPL_VAR SETTINGS.LABEL_START></a>
-	</td>
-	<td>
-		<a id="button" data-icon="delete" data-role="button" data-inline="true" data-mini="false" href="./index.cgi?do=stop"><TMPL_VAR SETTINGS.LABEL_STOP></a>
-	</td>
-	<td>
-		<a id="button" data-icon="refresh" data-role="button" data-inline="true" data-mini="false" href="./index.cgi?do=restart"><TMPL_VAR SETTINGS.LABEL_RESTART></a>
-	</td>
-	<td>
-		<a id="button" data-icon="delete" data-role="button" data-inline="true" data-mini="false" href="./index.cgi?do=enable"><TMPL_VAR SETTINGS.LABEL_ENABLE></a>
-	</td>
-	<td>
-		<a id="button" data-icon="delete" data-role="button" data-inline="true" data-mini="false" href="./index.cgi?do=disable"><TMPL_VAR SETTINGS.LABEL_DISABLE></a>
-	</td>
-	</tr>
-	<tr>
-	<td colspan=5 align=center>
-		<font face="courier"><TMPL_VAR SETTINGS.LABEL_BOOTSTATE>&nbsp;<b><TMPL_VAR BOOTSTATE></b>&nbsp;&nbsp;<TMPL_VAR SETTINGS.LABEL_STATE>&nbsp;<b><TMPL_VAR STATE></b></font>
-	</td>
-	</tr>
-	</table>
-</td></td>
-</table>
-</p>
-<br>
-<p>
-<TMPL_VAR SETTINGS.HINT_NOSETTINGS>
-</p>
-</center>
+<style>
+.datahidden {
+	display:none;
+}
+
+.tiny {
+	font-size:70%;
+}
+
+.small {
+	font-size:80%;
+}
+
+.middle {
+	font-size:120%;
+}
+
+.bold {
+	font-weight: bold;
+}
+
+.grayed {
+	color: gray;
+}
+
+.center {
+	text-align: center;
+}
+
+.grid {
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+	grid-column-gap: 15px;
+	grid-row-gap: 15px;
+	text-shadow: none;
+}
+
+.box { 
+	border: 1px solid black;
+	border-radius: 5px 5px 5px 5px;
+	padding: 5px;
+}
+
+.boxtitle {
+	background-color: #6dac20;
+	color: white;
+	text-shadow: 1px 1px 2px black;
+	border-radius: 5px 5px 5px 5px;
+	padding: 5px;
+	vertical-align: middle;
+}
+
+.boxrow {
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: center;
+	align-items: center;
+	padding: 0;
+	margin: 0;
+}
+
+.boxitem {
+	padding: 5px;
+	text-align: center;
+	vertical-align: middle;
+}
+
+.servicestatus {
+	display: grid;
+	grid-template-columns: auto auto auto auto;
+	grid-template-rows: 1fr;
+	gap: 0px 10px;
+	justify-content: center;
+	justify-items: center;
+	align-items: center;
+	text-shadow: none;
+}
+
+.margin {
+	margin: 10px;
+}
+
+.status {
+	padding: 7px;
+	box-sizing: border-box;
+	border-radius: 5px 5px 5px 5px;
+	background: #dfdfdf;
+	border: 1px solid #7E7E7E;
+	width: 170px;
+	text-align: center;
+}
+
+.ui-popup-container
+{
+	width:  50%;
+	height: 80%;
+}
+
+</style>
+
+<div class="servicestatus">
+	<a href="<TMPL_VAR "MEWEBUILINK">" target="_blank" border=0><img src="./images/motioneye_128.png"></a>
+</div>
+
+<br><br>
+
+<div class="servicestatus">
+	<div>
+		Service Status:
+	</div>
+	<div id="servicestatusicon">
+		<img src="./images/unknown_20.png">
+	</div>
+	<div class="status" id="servicestatus">
+		<TMPL_VAR "COMMON.LABEL_UNKNOWN">
+	</div>
+	<div>
+		<a href="#" onclick="servicerestart();return false;" class="ui-btn ui-icon-refresh ui-btn-icon-notext ui-corner-all">Refresh</a>
+	</div>
+
+</div>
+
+<br><br>
+<br><br>
+
+<div style="width: 100%; text-align: center;">
+	<TMPL_VAR "COMMON.HINT_NOOPTIONS">
+</div>
+
+<br><br>
+
